# FPL-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/fpl-agent/: ingest.py
src/fpl_agent/: engineer.py  ingest.py  logging_config.py  process.py
tests/: conftest.py  test_engineer.py  test_ingest.py  test_process.py
